<resources>
    <string name="app_name">Geo Silencer</string>
    <string name="silencer_title_hint">Enter title of the silencer</string>
    <string name="silencer_radius_hint">Enter silencer radius</string>
    <string name="silencer_address_hint">Enter address of the silencer</string>
    <string name="silencer_longitude_hint">Enter longitude of the silencer</string>
    <string name="silencer_latitude_hint">Enter latitude of the silencer</string>
    <string name="silencer_city_hint">City</string>
    <string name="silencer_state_hint">State</string>
    <string name="silencer_zipcode_hint">ZIP code</string>
    <string name="silencer_title_label">Title</string>
    <string name="silencer_radius_label">Radius</string>
    <string name="silencer_address_label">Address</string>
    <string name="silencer_latitude_label">Latitude</string>
    <string name="silencer_longitude_label">Longitude</string>
    <string name="map_button_label">Map</string>
    <string name="save_button_label">Save Silencer Settings</string>
    <string name="close_map_label">Close Map</string>
    <string name="silencer_title">Silencer Title</string>
    <string name="silencer_radius">Silencer Radius</string>
    <string name="silencer_address">Silencer Address</string>
    <string name="silencer_latitude">Silencer Latitude</string>
    <string name="silencer_longitude">Silencer Longitude</string>
    <string name="silencer_location">Silencer Location</string>
    <string name="silencer_start_time">Start Time</string>
    <string name="silencer_end_time">End Time</string>
    <string name="silencer_time_to">To</string>
    <string name="new_silencer">New Silencer</string>
    <string name="loc_perms"><b><u>Base Location Permissions</u></b></string>
    <string name="high_acc_perms"><b><u>High Accuracy Location Permissions</u></b></string>
    <string name="dnd_perms"><b><u>Do Not Disturb Permissions</u></b></string>
    <string name="notif_perms"><b><u>Notification Permissions</u></b></string>
    <string name="loc_details">The Geo Silencer App requires access to your device location
        services in order to determine your location and silence your phone in designated places.
        As our app utilizes geofences, it requires background location permissions so that our app
        continues to function when app is not in use. If you choose to revoke access,
        the Geo Silencer App will not be able to function as intended.</string>
    <string name="loc_details_v1">Tap the button below, and select allow for the prompt</string>
    <string name="loc_details_v2">The button will navigate to the
                                    location settings. Please navigate to App location permissions>
                                    Location Silencer, and set access to "Allow All the Time"</string>
    <string name="high_acc_details">Our app utilizes geofences, which requires high
        accuracy location services. If you choose to revoke access,
        the Geo Silencer App will not be able to function as intended.</string>
    <string name="high_acc_details_v1">The button below will
                                    direct to the location settings. Navigate to Advanced>Google
                                    Location Accuracy and turn on "Improve Location Accuracy"</string>
    <string name="high_acc_details_v2">Tap the button and change
                                        to Precision Location</string>
    <string name="dnd_details">Our app requires Do Not Disturb permissions to work. It
                                will be used to silence the phone when in range of the
                                time or location specified.</string>
    <string name="dnd_details_v1">Tap the button below, and go to Location Silencer,
                                    and turn on "Allow Do Not Disturb"</string>
    <string name="notif_details">Android 13 and up require apps to send notifications for background
                                    processes. If denied, the service will still work and will be shown
                                    running in the Foreground Service Task Manager.</string>
    <string name="enable_loc">Enable Location Services</string>
    <string name="enable_high_acc">Enable Precision Location</string>
    <string name="enable_dnd">Enable Do Not Disturb Permissions</string>
    <string name="enable_notif">Enable Notification Permissions</string>
    <string name="delete_text">Delete</string>
    <string name="enabled_all_perms">Continue</string>
    <string name="android9">Android 9</string>
    <string name="android10">Android 10 and higher</string>
    <string name="android11">Android 9-11</string>
    <string name="android12">Android 12 and higher</string>
    <string name="androidAll">Android 9 and higher</string>
    <string name="preference_file_key">com.example.android.while_in_use_location.PREFERENCE_FILE_KEY</string>
    <string-array name="units">
        <item>Meters</item>
        <item>Kilometers</item>
        <item>FEET</item>
        <item>Miles</item>
    </string-array>
</resources>