<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <TextView
        android:id="@+id/titleTextView"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/silencer_title_label" />

    <EditText
        android:id="@+id/silencer_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/silencer_title_hint"
        android:minHeight="48dp"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/radiusTextView"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/silencer_radius_label" />

    <EditText
        android:id="@+id/silencer_radius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/silencer_radius_hint"
        android:minHeight="48dp"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/addressTextView"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/silencer_address_label" />
    <EditText
        android:id="@+id/silencer_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/silencer_address_hint"
        android:minHeight="48dp"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/latitudeTextView"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/silencer_address_label" />
    <EditText
        android:id="@+id/silencer_latitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/silencer_latitude_hint"
        android:minHeight="48dp"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/longitudeTextView"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/silencer_address_label" />
    <EditText
        android:id="@+id/silencer_longitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/silencer_longitude_hint"
        android:minHeight="48dp"
        tools:ignore="TextContrastCheck" />


    <RelativeLayout
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="50"
        android:id="@+id/map_container">

        <com.google.android.gms.maps.MapView
            android:id="@+id/map_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </RelativeLayout>

<!--    <androidx.fragment.app.FragmentContainerView-->
<!--        android:id="@+id/maps"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:name="com.google.android.gms.maps.SupportMapFragment"-->
<!--        tools:layout="@layout/fragment_map">-->
<!--    </androidx.fragment.app.FragmentContainerView>-->

<!--    <Button-->
<!--        android:id="@+id/silencer_date"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        tools:text="Wed Nov 14 2018"/>-->

<!--    <Button-->
<!--        android:id="@+id/silencer_time"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        tools:text="11:56 EST" />-->
</LinearLayout>