<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/loc_perms"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/loc_perms"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/loc_details"/>

    <TextView
        android:id="@+id/loc_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loc_details"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loc_perms"
        app:layout_constraintBottom_toTopOf="@id/loc_button" />

    <Button
        android:id="@+id/loc_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loc_details"
        app:layout_constraintBottom_toTopOf="@id/high_acc_perms"/>

    <TextView
        android:id="@+id/high_acc_perms"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/high_acc_perms"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loc_button"
        app:layout_constraintBottom_toTopOf="@id/high_acc_details" />

    <TextView
        android:id="@+id/high_acc_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/high_acc_details"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/high_acc_perms"
        app:layout_constraintBottom_toTopOf="@id/high_acc_button" />

    <Button
        android:id="@+id/high_acc_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/high_acc_details"
        app:layout_constraintBottom_toTopOf="@id/dnd_perms" />

    <TextView
        android:id="@+id/dnd_perms"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dnd_perms"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/high_acc_button"
        app:layout_constraintBottom_toTopOf="@id/dnd_details"/>

    <TextView
        android:id="@+id/dnd_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dnd_details"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dnd_perms"
        app:layout_constraintBottom_toTopOf="@id/dnd_button" />

    <Button
        android:id="@+id/dnd_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dnd_details"
        app:layout_constraintBottom_toTopOf="@id/done_button"/>

    <Button
        android:id="@+id/done_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enabled_all_perms"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dnd_button"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>